2004-04-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkfilechooser.xml Add.
	* pygtk-gtkfilechooserdialog.xml Add.
	* pygtk-gtkfilechooserwidget.xml Add.
	* pygtk-gtkfilefilter.xml Add.

	* pygtk-gtkfilefilter.xml (add_custom) Doesn't take keyword args.

2004-04-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkeventbox.xml Add new methods: set_visible_window(),
	get_visible_window(), set_above_child() and get_above_child(); and
	properties: "above-child" and "visible-window" for PyGTK 2.4 and 
	GTK+ 2.4.

2004-04-05  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcomboboxentry.xml Add.

	* pygtk-gtkcontainer.xml Fix bug in synopsis of get_focus_chain().

	* pygtk-gtkcontainer.xml Property "child" is read-only.

	* pygtk-gtkdrawingarea.xml Tweak the description.

	* pygtk-gtkcombobox.xml 
	* pygtk-gtkcomboboxentry.xml Add gtk.CellLayout to class synopsis.

	* pygtk-gtkeditable.xml Tweak description to specify it's an interface.

	* pygtk-gtkentry.xml Add PyGTK 2,4 methods set_alignment(),
	get_alignment(), set_completion(), get_completion(). Also add GTK+2.4
	property "xalign"

	* pygtk-gtkentrycompletion.xml Add.

2004-04-04  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcombobox.xml Add.

	* pygtk-gtkcelllayout.xml. Add.

2004-04-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcheckbutton.xml Fix formatting of Ancestry description.

	* pygtk-gtkcheckmenuitem.xml Minor reformatting.

	* pygtk-gtkcolorbutton.xml Add description of GtkColorButton in
	GTK+ 2.4 and PyGTK 2.4.

	* pygtk-gtkcombo.xml Added deprecation warning for PyGTK 2.4.

2004-04-02  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbutton.xml Added descriptions of "focus-on-click", "xalign"
	and "yalign" propertiees for GTK+ 2.4. Added descriptions of the
	set_alignment(), get_alignment(), set_focus_on_click() and
	get_focus_on_click() methods available in PyGTK 2.4

	* pygtk-gtkbuttonbox.xml Add description of get_child_secondary()
	method available in PyGTK 2.4.
