@@ -1,3 +1,8 @@
+2004-04-08  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkfilefilter.xml Fix links to get_needed() method. Fix custom
+	function signature and description.
+
 2004-04-07  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkfilechooser.xml Add.
